--- a/.github/workflows/test-payments.yml
+++ b/.github/workflows/test-payments.yml
@@ -2,8 +2,8 @@ name: test-payments
 
 on:
   pull_request
-    paths:
-      - 'payments/**'
+#    paths:
+#      - 'payments/**'
 
 jobs:
   build:
